# LLMOps

./: .gitignore  Makefile  pyproject.toml
backend/: Dockerfile  README.md  docker-compose.yaml  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py  llm.py  medical_qa.py  sentiment.py
backend/app/core/: config.py  template.py
backend/app/models/: chat.py  medical_qa.py  sentiment.py
backend/evals/: sentiment.py
frontend/: Dockerfile  README.md  app.py  docker-compose.yaml  requirements.txt
notebooks/: download_adaptor.ipynb
